# AWS_AI_Project

./: .gitignore  .mcp.json  CLAUDE.md  Functional_Specification.md  INSTALLATION.md  PYQT_README.md  README.md  main.py  pyproject.optimized.toml  pyproject.toml  pyqt_main.py  requirements.txt  test_cursor_control.py  test_hand_gestures.py  websocket_multi_client_architecture.md
.claude/: settings.local.json
assets/styles/: dark_theme.qss
config/: settings.py
src/auth/: __init__.py  google_auth.py  google_auth_module.py
src/face/: __init__.py  aws_face_recognition_module.py  face_recognition_system.py
src/gesture/: gesture_recognizer.py  hand_overlay.py  macos_overlay.py  mouse_controller.py  simple_overlay.py  thumb_gesture_recognizer.py  tkinter_overlay.py
src/gesture/backup_overlays/: cursor_overlay.py  hand_overlay.py
src/gui/: main_window.py  main_window_ctk_backup.py  pyqt_main.py  settings_window_ctk_backup.py  tracking_window.py  tracking_window_ctk_backup.py
