[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigma-gesture-control"
version = "1.0.0"
description = "SIGMA - Smart Interactive Gesture Management Assistant"
authors = [
    {name = "AWS AI Team3", email = "team@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["gesture-control", "mediapipe", "hand-tracking", "pyqt6", "desktop-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

dependencies = [
    "mediapipe>=0.10.8,<0.11.0",
    "opencv-python>=4.8.1,<5.0.0", 
    "numpy>=1.24.3,<2.0.0",
    "pyautogui>=0.9.54",
    "PyQt6>=6.6.0",
]

[project.urls]
"Homepage" = "https://github.com/AWS-AI-team3/AWS_AI_Project"
"Repository" = "https://github.com/AWS-AI-team3/AWS_AI_Project"
"Issues" = "https://github.com/AWS-AI-team3/AWS_AI_Project/issues"

[project.scripts]
gesture-control = "src.gui.pyqt_main:main"
gesture-control-simple = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

# 개발 도구 설정
[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]